BAL-24: fix design problems on mobile devices

--- a/sass/sl-components/_kontakt.scss
+++ b/sass/sl-components/_kontakt.scss
@@ -9,11 +9,20 @@
 // we have to remove the top margin on the body p tag for the google 
 // map to align correctly on the tp
 
-.page-node-52 {
-    .field-name-body p {
+.page-node-52
+{
+    .field-name-body p
+    {
         margin-top: 0 !important;
-        iframe {
-            max-width: 100%;
+        iframe
+        {
+            max-width: 90%; // leave a scrolling strip on the right side on mobile 
+            // devices
+
+            @include breakpoint ($desktop)
+            {
+                max-width: 100%;
+            }
         }
     }
 }
